# offline-netvar-dumper-rs

./: Cargo.toml
src/: main.rs
